--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@material/form-field": "^15.0.0-canary.7f224ddd4.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.3",
+    "ngx-custom-validators": "^11.0.1",
     "ngx-translate-messageformat-compiler": "^7.0.0",
     "ngx-translate-multi-http-loader": "^18.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.5",
     "tslib": "^2.3.0",
+    "validator": "^13.12.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/validator": "^13.12.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
