contact Us is finish and loading screen and navbat

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@material/form-field": "^15.0.0-canary.7f224ddd4.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "angular-animations": "^0.11.0",
     "bootstrap": "^5.3.3",
     "ngx-custom-validators": "^11.0.1",
+    "ngx-spinner": "^17.0.0",
     "ngx-translate-messageformat-compiler": "^7.0.0",
     "ngx-translate-multi-http-loader": "^18.0.0",
     "rxjs": "~7.8.0",
