--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss",
               "src/app/styles/layout.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": []
           },
